config/conversion_webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
spec:
  ports:
  - port: 9443
    protocol: TCP
    targetPort: 9443
    name: https-convert
  selector:
    app.kubernetes.io/component: api-gateway-operator.kyma-project.io
    control-plane: controller-manager
