config/conversion_webhook/apirule_mutating_webhook.yaml
# This patch add annotation to admission webhook config and
# the variables $(CERTIFICATE_NAMESPACE) and $(CERTIFICATE_NAME) will be substituted by kustomize.
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
  - name: "originalversion.apirule.gateway.kyma-project.io"
    rules:
      - apiGroups:   ["gateway.kyma-project.io"]
        apiVersions: ["v2alpha1"]
        operations:  ["CREATE","UPDATE"]
        resources:   ["apirules"]
        scope:       "*"
    clientConfig:
      service:
        namespace: "kyma-system"
        name: "api-gateway-webhook-service"
        port: 9443
        path: "/mutate-gateway-kyma-project-io-v2alpha1-apirule"
        # caBundle: "<automatically injected during innit and updated by the certificate controller>"
    admissionReviewVersions: ["v1","v1beta1"]
    sideEffects: None
    failurePolicy: Fail
